# anchor

./: README.md  index.html
pipeline/: README.md  pyproject.toml
pipeline/examples/: 01_scout_licensed_sources.py  02_probe_and_gate.py  03_segment_people.py  04_noise_as_signal.py
pipeline/src/anchor/: __init__.py  cli.py  ids.py
pipeline/src/anchor/enrich/: __init__.py  base.py  body.py  caption.py  contact.py  depth.py  hands.py  segment.py  tracks.py
pipeline/src/anchor/ingest/: __init__.py  crawler.py  intake.py  scout.py
pipeline/src/anchor/latents/: __init__.py  cache.py
pipeline/src/anchor/noise/: __init__.py  residual.py
pipeline/src/anchor/package/: __init__.py  datasheet.py  lerobot_v3.py
pipeline/src/anchor/pipeline/: __init__.py  runner.py  stages.py
pipeline/src/anchor/quality/: __init__.py  gates.py  metrics.py
pipeline/src/anchor/retarget/: __init__.py  feasibility.py  g1.py
pipeline/src/anchor/schema/: __init__.py  episode.py  taxonomy.py
pipeline/src/anchor/serve/: __init__.py  api.py  builder.py  catalog.py
pipeline/src/anchor/trust/: __init__.py  dedup.py  provenance.py  synthetic.py
